test/valid/FieldIdEqMethodId/FieldIdEqMethodId.plume
/**
 * @author Diogo Marques, 30100
 */
class FieldIdEqMethodId extends Object is
	field FieldIdEqMethodId : Integer
	
	method override toString : () -> String is
		FieldIdEqMethodId.toString()
	